Fixed banner sticking out on small screens #62

--- a/media/bootstrap_css/ngt.css
+++ b/media/bootstrap_css/ngt.css
@@ -25,7 +25,7 @@ html {
 
 #header h1 {
         height: 110px;
-        width: 759px;
+        width: 300px;
         background-image: url(./images/ngt/ngt-header.png);
         background-position: 20px 20px;
         background-repeat: no-repeat;   
